force-app/main/default/objects/redu_Email_Pipeline__c/redu_Email_Pipeline__c.object-meta.xml
<CustomObject>
    <description>Email templates for automated emails.  Includes tempalte body and filter options.</description>
    <label>Email Pipeline</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Email Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>