force-app/main/default/objects/redu_Email_Pipeline__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of email pipeline.</description>
    <inlineHelpText>Category of email pipeline.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communication_Category</valueSetName>
    </valueSet>
</CustomField>