force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Account__c.field-meta.xml
<CustomField>
    <fullName>redu_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account (but need something higher in the heirarchy) as this is metadata!</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Pipelines</relationshipLabel>
    <relationshipName>Email_Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>