force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Body__c.field-meta.xml
<CustomField>
    <fullName>redu_Body__c</fullName>
    <description>Body of email.</description>
    <inlineHelpText>Body of email. Use &apos;&lt;&apos; and &apos;&gt;&apos; for merge fields.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>