force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Brand__c.field-meta.xml
<CustomField>
    <fullName>redu_Brand__c</fullName>
    <description>The brand (provider) this email template applies to.</description>
    <inlineHelpText>The brand (provider) this email template applies to.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>redu_Brand</valueSetName>
    </valueSet>
</CustomField>