force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>redu_Object_API_Name__c</fullName>
    <description>The API Name of the object the email template is required for.</description>
    <inlineHelpText>The API Name of the object the email template is required for.</inlineHelpText>
    <label>Object API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hed__Application__c</fullName>
                <default>true</default>
                <label>hed__Application__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>