force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Purpose__c.field-meta.xml
<CustomField>
    <fullName>redu_Purpose__c</fullName>
    <description>Purpose of email template.</description>
    <inlineHelpText>Purpose of email template.</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communication_Purpose</valueSetName>
    </valueSet>
</CustomField>