force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_RA_RI__c.field-meta.xml
<CustomField>
    <fullName>redu_RA_RI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if source is RA &amp; RI (true) or Order Confirmation (false)</description>
    <inlineHelpText>Determines if source is RA &amp; RI.</inlineHelpText>
    <label>RA RI</label>
    <type>Checkbox</type>
</CustomField>