force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>redu_Recipient_Type__c</fullName>
    <description>Flag switch to determine specific recipient type audience.</description>
    <inlineHelpText>Flag switch to determine specific recipient type audience.</inlineHelpText>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent or Student</fullName>
            </value>
            <value>
                <fullName>Agent only</fullName>
            </value>
            <value>
                <fullName>Student only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>