force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Stage__c.field-meta.xml
<CustomField>
    <fullName>redu_Stage__c</fullName>
    <description>The stage (or path, of status) of the object this email template applies to.</description>
    <inlineHelpText>The stage (or path, of status) of the object this email template applies to.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(All)</fullName>
                <default>true</default>
                <label>(All)</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Student Has Accepted</fullName>
            </value>
            <value>
                <fullName>Conditionally Admitted</fullName>
            </value>
            <value>
                <fullName>Fully Admitted</fullName>
            </value>
            <value>
                <fullName>Pre-Arrival</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>