force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Study_Country__c.field-meta.xml
<CustomField>
    <fullName>redu_Study_Country__c</fullName>
    <description>The study country (or all) this email template applied to.</description>
    <inlineHelpText>The study country (or all) this email template applied to.</inlineHelpText>
    <label>Study Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(All)</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Nederlands</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>