force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Subject__c.field-meta.xml
<CustomField>
    <fullName>redu_Subject__c</fullName>
    <description>Subject to be used in the email. Use &apos;&lt;&apos; and &apos;&gt;&apos; for merge fields.</description>
    <inlineHelpText>Subject to be used in the email. Use &apos;&lt;&apos; and &apos;&gt;&apos; for merge fields.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>