force-app/main/default/objects/redu_Email_Pipeline__c/fields/redu_Type__c.field-meta.xml
<CustomField>
    <fullName>redu_Type__c</fullName>
    <description>Type of email template.</description>
    <inlineHelpText>Type of email template.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(All)</fullName>
                <default>true</default>
                <label>(All)</label>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>