force-app/main/default/objects/redu_Email_Pipeline__c/fields/Study_Centre__c.field-meta.xml
<CustomField>
    <fullName>Study_Centre__c</fullName>
    <description>The study centre (or all) this email pipeline applied to.</description>
    <inlineHelpText>The study centre (or all) this email pipeline applied to.</inlineHelpText>
    <label>Study Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(All)</fullName>
                <default>true</default>
                <label>(All)</label>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>