force-app/main/default/objects/redu_Email_Pipeline__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Name of email template.</description>
    <inlineHelpText>Name of email template.</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>